--- a/src/elephant_agv_driver/package.xml
+++ b/src/elephant_agv_driver/package.xml
@@ -12,9 +12,11 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>rosparam</build_depend>
 
   <exec_depend>rospy</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>rosparam</exec_depend>
 </package> 
